Changes to 1-introduction

--- a/04-prompt-engineering-fundamentals/1-introduction.ipynb
+++ b/04-prompt-engineering-fundamentals/1-introduction.ipynb
@@ -26,9 +26,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[198, 41, 20089, 374, 279, 18172, 11841, 505, 279, 8219, 323, 279, 7928, 304, 279, 25450, 744, 13, 1102, 374, 264, 6962, 14880, 449, 264, 3148, 832, 7716, 52949, 339, 430, 315, 279, 8219, 11, 719, 1403, 9976, 7561, 34902, 3115, 430, 315, 682, 279, 1023, 33975, 304, 279, 25450, 744, 11093, 13, 50789, 374, 832, 315, 279, 72021, 6302, 9621, 311, 279, 19557, 8071, 304, 279, 3814, 13180, 11, 323, 706, 1027, 3967, 311, 14154, 86569, 2533, 1603, 12715, 3925, 13, 1102, 374, 7086, 1306, 279, 13041, 10087, 50789, 8032, 777, 60, 3277, 19894, 505, 9420, 11, 50789, 649, 387, 10107, 3403, 369, 1202, 27000, 3177, 311, 6445, 9621, 35612, 17706, 508, 60, 323, 374, 389, 5578, 279, 4948, 1481, 1315, 478, 5933, 1665, 304, 279, 3814, 13180, 1306, 279, 17781, 323, 50076, 627]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[b'\\n',\n",
+       " b'J',\n",
+       " b'upiter',\n",
+       " b' is',\n",
+       " b' the',\n",
+       " b' fifth',\n",
+       " b' planet',\n",
+       " b' from',\n",
+       " b' the',\n",
+       " b' Sun',\n",
+       " b' and',\n",
+       " b' the',\n",
+       " b' largest',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' Solar',\n",
+       " b' System',\n",
+       " b'.',\n",
+       " b' It',\n",
+       " b' is',\n",
+       " b' a',\n",
+       " b' gas',\n",
+       " b' giant',\n",
+       " b' with',\n",
+       " b' a',\n",
+       " b' mass',\n",
+       " b' one',\n",
+       " b'-th',\n",
+       " b'ousand',\n",
+       " b'th',\n",
+       " b' that',\n",
+       " b' of',\n",
+       " b' the',\n",
+       " b' Sun',\n",
+       " b',',\n",
+       " b' but',\n",
+       " b' two',\n",
+       " b'-and',\n",
+       " b'-a',\n",
+       " b'-half',\n",
+       " b' times',\n",
+       " b' that',\n",
+       " b' of',\n",
+       " b' all',\n",
+       " b' the',\n",
+       " b' other',\n",
+       " b' planets',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' Solar',\n",
+       " b' System',\n",
+       " b' combined',\n",
+       " b'.',\n",
+       " b' Jupiter',\n",
+       " b' is',\n",
+       " b' one',\n",
+       " b' of',\n",
+       " b' the',\n",
+       " b' brightest',\n",
+       " b' objects',\n",
+       " b' visible',\n",
+       " b' to',\n",
+       " b' the',\n",
+       " b' naked',\n",
+       " b' eye',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' night',\n",
+       " b' sky',\n",
+       " b',',\n",
+       " b' and',\n",
+       " b' has',\n",
+       " b' been',\n",
+       " b' known',\n",
+       " b' to',\n",
+       " b' ancient',\n",
+       " b' civilizations',\n",
+       " b' since',\n",
+       " b' before',\n",
+       " b' recorded',\n",
+       " b' history',\n",
+       " b'.',\n",
+       " b' It',\n",
+       " b' is',\n",
+       " b' named',\n",
+       " b' after',\n",
+       " b' the',\n",
+       " b' Roman',\n",
+       " b' god',\n",
+       " b' Jupiter',\n",
+       " b'.[',\n",
+       " b'19',\n",
+       " b']',\n",
+       " b' When',\n",
+       " b' viewed',\n",
+       " b' from',\n",
+       " b' Earth',\n",
+       " b',',\n",
+       " b' Jupiter',\n",
+       " b' can',\n",
+       " b' be',\n",
+       " b' bright',\n",
+       " b' enough',\n",
+       " b' for',\n",
+       " b' its',\n",
+       " b' reflected',\n",
+       " b' light',\n",
+       " b' to',\n",
+       " b' cast',\n",
+       " b' visible',\n",
+       " b' shadows',\n",
+       " b',[',\n",
+       " b'20',\n",
+       " b']',\n",
+       " b' and',\n",
+       " b' is',\n",
+       " b' on',\n",
+       " b' average',\n",
+       " b' the',\n",
+       " b' third',\n",
+       " b'-b',\n",
+       " b'right',\n",
+       " b'est',\n",
+       " b' natural',\n",
+       " b' object',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' night',\n",
+       " b' sky',\n",
+       " b' after',\n",
+       " b' the',\n",
+       " b' Moon',\n",
+       " b' and',\n",
+       " b' Venus',\n",
+       " b'.\\n']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXERCISE:\n",
     "# 1. Run the exercise as is first\n",
@@ -72,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "by the dawn's early light\n"
+     ]
+    }
+   ],
    "source": [
     "# The OpenAI SDK was updated on Nov 8, 2023 with new guidance for migration\n",
     "# See: https://github.com/openai/openai-python/discussions/742\n",
@@ -126,14 +286,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: The Martian War of 2076 - A Lesson Plan\n",
+      "\n",
+      "Objective: \n",
+      "To educate students about the Martian War of 2076, its causes, key events, and consequences, fostering critical thinking, historical analysis, and empathy.\n",
+      "\n",
+      "Grade Level: \n",
+      "High School (9th-12th grade)\n",
+      "\n",
+      "Duration: \n",
+      "2-3 class periods (approximately 90 minutes each)\n",
+      "\n",
+      "Materials Needed:\n",
+      "1. Access to research materials (books, articles, online resources)\n",
+      "2. Whiteboard or blackboard\n",
+      "3. Markers or chalk\n",
+      "4. Handouts (optional)\n",
+      "5. Multimedia resources (optional)\n",
+      "\n",
+      "Lesson Plan:\n",
+      "\n",
+      "Introduction (10 minutes):\n",
+      "1. Begin the lesson by asking students if they have heard about the Martian War of 2076. Encourage them to share any prior knowledge or assumptions they may have.\n",
+      "2. Explain the objective of the lesson and its relevance in understanding historical conflicts and their impact on society.\n",
+      "\n",
+      "Background and Context (20 minutes):\n",
+      "1. Provide a brief overview of the colonization of Mars and the tensions that arose between Earth and Mars leading up to the war.\n",
+      "2. Discuss the political, economic, and environmental factors that contributed to the conflict.\n",
+      "3. Highlight the role of technological advancements and their impact on warfare during this period.\n",
+      "\n",
+      "Causes and Triggers (30 minutes):\n",
+      "1. Divide the class into small groups and assign each group a specific cause or trigger of the Martian War.\n",
+      "2. Instruct the groups to research and discuss their assigned cause or trigger, including its significance and how it contributed to the outbreak of war.\n",
+      "3. Have each group present their findings to the class, encouraging discussion and debate.\n",
+      "\n",
+      "Key Events and Battles (40 minutes):\n",
+      "1. Provide an overview of the major events and battles that took place during the Martian War.\n",
+      "2. Use visual aids, maps, or multimedia resources to enhance understanding and engagement.\n",
+      "3. Discuss the strategies, tactics, and weaponry used by both sides.\n",
+      "4. Encourage students to analyze the impact of these events on the outcome of the war.\n",
+      "\n",
+      "Consequences and Aftermath (30 minutes):\n",
+      "1. Discuss the consequences of the Martian War on both Earth and Mars, including political, social, and economic ramifications.\n",
+      "2. Explore the impact on the environment and the subsequent efforts for reconstruction and reconciliation.\n",
+      "3. Facilitate a class discussion on the lessons learned from the Martian War and how they can be applied to prevent future conflicts.\n",
+      "\n",
+      "Reflection and Empathy (20 minutes):\n",
+      "1. Assign students to write a short reflection on the Martian War, focusing on the perspectives of individuals affected by the conflict.\n",
+      "2. Encourage students to empathize with the experiences of soldiers, civilians, and leaders on both sides.\n",
+      "3. Discuss the importance of empathy in understanding historical events and fostering peace.\n",
+      "\n",
+      "Conclusion (10 minutes):\n",
+      "1. Summarize the key points discussed throughout the lesson.\n",
+      "2. Allow time for any remaining questions or discussions.\n",
+      "3. Emphasize the significance of studying historical conflicts to gain insights into human nature, diplomacy, and the importance of peaceful resolutions.\n",
+      "\n",
+      "Extension Activities (optional):\n",
+      "1. Ask students to create a timeline of the Martian War, including key events and their significance.\n",
+      "2. Organize a debate or mock trial, where students can argue for or against the actions of specific individuals or nations during the war.\n",
+      "3. Assign a creative project, such as writing a short story or creating artwork, that explores the experiences of individuals during the Martian War.\n",
+      "\n",
+      "Note: Adjust the duration and activities based on the available class time and student needs.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
-    "## Set the text for simple prompt or primary content\n",
-    "## Prompt shows a template format with text in it - add cues, commands etc if needed\n",
-    "## Run the completion \n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")\n",
+    "\n",
+    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "        max_tokens=1024\n",
+    "    )\n",
+    "    return response.choices[0].message.content\n",
+    "\n",
     "text = f\"\"\"\n",
     "generate a lesson plan on the Martian War of 2076.\n",
     "\"\"\"\n",
@@ -159,9 +401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupiter is a really big planet that is fifth from the Sun. It is made of gas and is the largest planet in our Solar System. It is much smaller than the Sun, but much bigger than all the other planets combined. People have known about Jupiter for a really long time because it is very bright in the night sky. It is named after a god from ancient Rome. Sometimes, Jupiter is so bright that it can make shadows on Earth. It is usually the third-brightest thing we can see at night, after the Moon and Venus.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Example\n",
     "# https://platform.openai.com/playground/p/default-summarize\n",
@@ -206,16 +456,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The World Series in 2020 was played at the Globe Life Field in Arlington, Texas.\n"
+     ]
+    }
+   ],
    "source": [
     "response = openai.chat.completions.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a sarcastic assistant.\"},\n",
+    "        {\"role\": \"system\", \"content\": \"You are a nice assistant.\"},\n",
     "        {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
-    "        {\"role\": \"assistant\", \"content\": \"Who do you think won? The Los Angeles Dodgers of course.\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"The Los Angeles Dodgers.\"},\n",
     "        {\"role\": \"user\", \"content\": \"Where was it played?\"}\n",
     "    ]\n",
     ")\n",
@@ -228,6 +486,24 @@
    "source": [
     "### Exercise: Explore Your Intuition\n",
     "The above examples give you patterns that you can use to create new prompts (simple, complex, instruction etc.) - try creating other exercises to explore some of the other ideas we've talked about like examples, cues and more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a nice assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"The Los Angeles Dodgers.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Where was it played?\"}\n",
+    "    ]\n",
+    ")\n",
+    "print(response.choices[0].message.content)"
    ]
   }
  ],
@@ -247,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
